--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,18 @@ body {
 	font-family: Arial, Helvetica, san-serif;
 }
 
+.assignment {
+    display:flex;
+    padding:10px;
+    margin:10px;
+    background:lightblue;
+}
+
+.assignment img {
+    width:200px;
+    padding:10px;
+}
+
 h1 {
 	color:#282a2e;
 	text-align:center;
