--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,12 @@ body {
 	font-family: Arial, Helvetica, san-serif;
 }
 
+.assignments {
+	display: flex;
+	flex-wrap:wrap;
+}
 .assignment {
-    display:flex;
+	width: 25%;
     padding:40px;
     margin-left:10px;
     margin-right:10px;
@@ -23,6 +27,8 @@ body {
     margin-right: 20px;
     border: 8px solid #81a1c1;
     border-radius:8px;
+    display:block;
+    margin:auto;
 }
 
 h1 {
